<resources>
    <string name="app_name">BookMyTicket</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="name">Name</string>
    <string name="releaseDate">Release Date :</string>
    <string name="genres">Genres :</string>
    <string name="overview">Overview</string>
    <string name="book_ticket">Book Ticket</string>
    <string name="selected_seats">Selected Seats : </string>
    <string name="show_seats">Show Seats</string>
    <string name="no_of_persons">No. of Persons : </string>
    <string name="select_location">Select Location : </string>
    <string name="done">Done</string>
    <string name="selected_location">Selected Location :</string>
    <string name="movie_name">Movie Name</string>
    <string name="time">Time :</string>
    <string name="all_bookings">All Bookings</string>
    <string name="cinema2">PVR: Forum Mall, Koramangala</string>
    <string name="cinema1">CinePolis: OrionMall, Rajaji Nagar</string>
    <string name="cinema3">PVR: Vega City, Bannerghatta Road</string>
    <string name="cinema4">PVR: Phoenix Marketcity Mall, Whitefield Road</string>
    <string name="unavailable">: Unavailable Seats</string>
    <string name="player_error">error</string>
</resources>
