<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#d3d3d3"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.MovieDetails.MovieDetailsActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="60dp">

            <ProgressBar
                android:id="@+id/progressBar_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                tools:ignore="MissingConstraints" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/dots_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:dotsColor="@android:color/white"
                app:dotsCornerRadius="8dp"
                app:dotsSize="10dp"
                app:dotsSpacing="4dp"
                app:dotsWidthFactor="2.5"
                app:selectedDotColor="@color/colorAccent"
                app:progressMode="true"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="@id/viewpager"
                app:layout_constraintBottom_toBottomOf="@id/viewpager"
                />

            <Button
                android:id="@+id/trailer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch_trailer"
                app:layout_constraintStart_toStartOf="@id/viewpager"
                app:layout_constraintBottom_toBottomOf="@id/viewpager"
                style="@style/Widget.MaterialComponents.Button"
                android:textSize="16sp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_play_circle_outline_black_24dp"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/details_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp"
                android:layout_margin="10dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintTop_toBottomOf="@id/viewpager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:paddingTop="12dp"
                    android:paddingStart="15dp"
                    android:paddingBottom="15dp"
                    android:paddingEnd="10dp"
                    android:orientation="vertical"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/movie_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:layout_margin="5dp"
                        android:text="@string/name"
                        android:textColor="@android:color/black"/>


                    <RatingBar
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:numStars="5"
                        android:stepSize="0.1"
                        android:isIndicator="true" />

                    <TextView
                        android:id="@+id/release_date_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_margin="5dp"
                        android:text="@string/releaseDate" />

                    <TextView
                        android:id="@+id/genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_margin="5dp"
                        android:text="@string/genres" />

                    <TextView
                        android:id="@+id/movie_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/overview"
                        android:layout_margin="5dp"
                        android:textColor="@android:color/black"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

        <TextView
            android:id="@+id/book_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_ticket"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="24sp"
            tools:targetApi="m"
            android:focusable="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>
